# CMakeMaya

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dodo.py  pyproject.toml
cmake/: FindDemBones.cmake  FindEigen.cmake  FindMaya.cmake  FindPybind11.cmake
projects/IngoClemens/: readme.md
projects/IngoClemens/brSmoothWeights/: CMakeLists.txt
projects/IngoClemens/rampWeight/: CMakeLists.txt
projects/IngoClemens/weightDriver/: CMakeLists.txt
projects/TimmyLiang/: readme.md
projects/TimmyLiang/curveBrush/: CMakeLists.txt
projects/TimmyLiang/noiseSphere/: CMakeLists.txt
projects/Toolchefs/softIKSolver/: CMakeLists.txt
projects/chadmv/: readme.md
projects/chadmv/cmt/: CMakeLists.txt
projects/chadmv/cvwrap/: CMakeLists.txt
projects/hot_reload/: CMakeLists.txt  readme.md
projects/hot_reload/logic/: logic.h
projects/hot_reload/maya_deformer/: deformer.cpp  deformer.h  deformer_platform.cpp  deformer_platform.h  plugin_main.cpp  plugin_main.h
projects/hot_reload/scripts/: scene_setup.py  test_deformer.py
projects/official/: Readme.md
projects/official/grabUV/: CMakeLists.txt  readme.md
projects/official/helixTool/: CMakeLists.txt  helixTool.cpp  readme.md
projects/official/helixTool/scripts/: helixTool.mel  launch_maya.py
projects/official/manipOverride/: CMakeLists.txt
projects/official/sineNode/: CMakeLists.txt
projects/official/uiDrawManager/: CMakeLists.txt
projects/pyd/: CMakeLists.txt  readme.md
projects/pyd/pyHello/: maya_python_c_ext_py_mod_main.cpp
projects/pyd/pyMayaPlugins/: pythonModule.h
projects/pyd/scripts/: test_mll.py  test_pyd.py
projects/robertjoosten/: readme.md
projects/robertjoosten/maya-dem-bones/: CMakeLists.txt
projects/sineNode/: CMakeLists.txt  sineNode.cpp
projects/sonictk/: readme.md
projects/sonictk/hot_reload/: CMakeLists.txt
projects/sonictk/hot_reload/logic/: logic.cpp
projects/sonictk/hot_reload/maya_deformer/: deformer.cpp  deformer_platform.cpp  plugin_main.cpp
projects/sonictk/hot_reload/scripts/: test_deformer.py
projects/sonictk/pyd/: CMakeLists.txt  readme.md
projects/sonictk/pyd/pyCommand/: main.cpp
projects/sonictk/pyd/pyDeformer/: main.cpp
projects/sonictk/pyd/pyHello/: main.cpp  maya_python_c_ext_py_hello_world.cpp  maya_python_c_ext_py_mod_main.cpp
projects/sonictk/pyd/pyMayaPlugins/: pluginMain.cpp
projects/sonictk/pyd/pybind11/: main.cpp
projects/sonictk/pyd/scripts/: test_mll.py  test_py_command.py  test_py_deformer.py  test_pybind11.py  test_pyd.py
projects/testCommand/: CMakeLists.txt
projects/testDeformer/: CMakeLists.txt
template/: Readme.md  cookiecutter.json
template/{{cookiecutter.project_name}}/: CMakeLists.txt  pluginMain.cpp
